Bug 15950 - ctdb can crash with inconsistent cluster lock configuration
Summary: ctdb can crash with inconsistent cluster lock configuration
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Clustering (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-11-18 09:34 UTC by Volker Lendecke
Modified: 2025-12-18 16:14 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.23 and 4.22 (1.79 KB, patch)
2025-11-19 10:39 UTC, Volker Lendecke
martins: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2025-11-18 09:34:03 UTC
If a node is running with a cluster lock configured and another node starts with a different cluster lock configuration starts and wants to join the cluster, the subsequent node will crash.
Comment 2 Samba QA Contact 2025-11-19 03:05:03 UTC
This bug was referenced in samba master:

66ebdb917054f4841f583ee21f910a1869712b53
Comment 3 Volker Lendecke 2025-11-19 10:39:33 UTC
Created attachment 18777 [details]
patch for 4.23 and 4.22
Comment 4 Martin Schwenke 2025-11-19 11:04:08 UTC
Volker: is release manager still Jule, or is it now Björn?  Can you please reassign to the correct person?  Thanks...
Comment 5 Jule Anger 2025-11-21 13:31:05 UTC
Pushed to autobuild-v4-{23,22}-test.
At the moment, I'm still doing the release management :)
Comment 6 Samba QA Contact 2025-11-21 14:36:19 UTC
This bug was referenced in samba v4-22-test:

ac715e2e6b3ddced2939d9976f30f44eb7c0a9fc
Comment 7 Samba QA Contact 2025-11-21 16:53:19 UTC
This bug was referenced in samba v4-23-test:

1bfd8466f653db2c1768cd53481fa9f0e8815b2f
Comment 8 Jule Anger 2025-11-26 08:43:03 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2025-12-12 13:57:13 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.4):

1bfd8466f653db2c1768cd53481fa9f0e8815b2f
Comment 10 Samba QA Contact 2025-12-18 16:14:53 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.7):

ac715e2e6b3ddced2939d9976f30f44eb7c0a9fc